--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 <meta charset="UTF-8">
 <title>Asistencia Orquestando</title>
 
+<!-- 🔥 FIREBASE -->
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
+
 <style>
 body {
   font-family: Arial, sans-serif;
@@ -36,9 +40,7 @@ select, input, button {
   font-size: 14px;
 }
 
-button {
-  cursor: pointer;
-}
+button { cursor: pointer; }
 
 .encabezado-semana, .semana {
   display: grid;
@@ -59,203 +61,249 @@ button {
   font-size: 12px;
 }
 
-.fin-semana {
-  background: #ffe0e0;
-}
+.fin-semana { background: #ffe0e0; }
+.entrada { border-left: 6px solid green; }
+.salida { border-left: 6px solid blue; }
 
-.entrada {
-  border-left: 6px solid green;
-}
-
-.salida {
-  border-left: 6px solid blue;
-}
-
-/* ✅ CALENDARIO ESCALADO SIN SUPERPOSICIÓN */
 .calendario-wrapper {
   transform: scale(0.67);
   transform-origin: top center;
-  margin-top: 30px;     /* separación correcta */
-  padding-top: 20px;   /* evita que se monte */
+  margin-top: 30px;
+  padding-top: 20px;
+}
+
+/* 🔐 BOTÓN ADMIN */
+.admin-btn {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  width: 38px;
+  height: 38px;
+  border-radius: 50%;
+  background: #000;
+  color: #fff;
+  font-weight: bold;
+  font-size: 18px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  opacity: 0.15;
+}
+.admin-btn:hover { opacity: 1; }
+
+/* 🛠 PANEL ADMIN */
+.admin-panel {
+  display: none;
+  background: #f5f5f5;
+  padding: 15px;
+  border-radius: 10px;
+  margin-top: 15px;
 }
 </style>
 </head>
 
 <body>
+
 <div class="contenedor">
 
-<img src="logo-orquestando.png" class="logo" alt="Orquestando">
-
-<h1>SISTEMA DE ASISTENCIA – ORQUESTANDO</h1>
-
-<!-- EDUCADORES -->
-<select id="educador">
-  <option value="">👤 Seleccione educador</option>
-  <option>Elvis Ylla Uscamayta</option>
-  <option>Nilton Ibarra Vilchez</option>
-  <option>Hector Roberto Galvez Zuñiga</option>
-</select>
-
-<!-- PIN -->
-<input type="password" id="pin" placeholder="🔐 PIN 5 dígitos" maxlength="5">
-
-<br>
-
-<button onclick="marcar('entrada')">🟢 Entrada</button>
-<button onclick="marcar('salida')">🔵 Salida</button>
-
-<hr>
-
-<select id="mes"></select>
-<select id="anio"></select>
-
-<br>
-
-<button onclick="verAsistencias()">📅 Ver asistencias</button>
-<button onclick="descargarExcel()">📥 Descargar Excel</button>
-
-<!-- CALENDARIO -->
-<div class="calendario-wrapper">
-
-  <div class="encabezado-semana">
-    <div>SÁB</div>
-    <div>DOM</div>
-    <div>LUN</div>
-    <div>MAR</div>
-    <div>MIÉ</div>
-    <div>JUE</div>
-    <div>VIE</div>
+  <!-- LOGO + BOTÓN ADMIN -->
+  <div style="position: relative; display: inline-block;">
+    <img src="logo-orquestando.png" class="logo" alt="Orquestando">
+    <div class="admin-btn" onclick="abrirAdmin()">O</div>
   </div>
 
-  <div id="calendario"></div>
+  <h1>SISTEMA DE ASISTENCIA – ORQUESTANDO</h1>
 
-</div>
+  <!-- EDUCADORES -->
+  <select id="educador">
+    <option value="">👤 Seleccione educador</option>
+    <option>Elvis Ylla Uscamayta</option>
+    <option>Nilton Ibarra Vilchez</option>
+    <option>Hector Roberto Galvez Zuñiga</option>
+  </select>
+
+  <input type="password" id="pin" placeholder="🔐 PIN 5 dígitos" maxlength="5">
+  <br>
+
+  <button onclick="marcar('entrada')">🟢 Entrada</button>
+  <button onclick="marcar('salida')">🔵 Salida</button>
+
+  <!-- PANEL ADMIN -->
+  <div class="admin-panel" id="adminPanel">
+    <h3>🔧 MODO ADMINISTRADOR</h3>
+
+    <select id="adminEducador">
+      <option value="">Seleccione educador</option>
+      <option>Elvis Ylla Uscamayta</option>
+      <option>Nilton Ibarra Vilchez</option>
+      <option>Hector Roberto Galvez Zuñiga</option>
+    </select>
+
+    <input type="date" id="adminFecha">
+    <input type="time" id="adminEntrada">
+    <input type="time" id="adminSalida">
+    <br>
+
+    <button onclick="guardarEdicion()">💾 Guardar cambios</button>
+  </div>
+
+  <hr>
+
+  <select id="mes"></select>
+  <select id="anio"></select>
+  <br>
+
+  <button onclick="verAsistencias()">📅 Ver asistencias</button>
+  <button onclick="descargarExcel()">📥 Descargar Excel</button>
+
+  <!-- CALENDARIO -->
+  <div class="calendario-wrapper">
+    <div class="encabezado-semana">
+      <div>SÁB</div><div>DOM</div><div>LUN</div><div>MAR</div>
+      <div>MIÉ</div><div>JUE</div><div>VIE</div>
+    </div>
+    <div id="calendario"></div>
+  </div>
 
 </div>
 
 <script>
-/* 🔐 PINES DEFINITIVOS */
-const pines = {
-  "Elvis Ylla Uscamayta": "20261",
-  "Nilton Ibarra Vilchez": "20262",
-  "Hector Roberto Galvez Zuñiga": "20263"
-};
+  // 🔥 CONFIGURACIÓN FIREBASE
+  const firebaseConfig = {
+    apiKey: "AIzaSyB5DmQh3_4qOZKejJWP2Ul4MJ2qeV_QYCg",
+    authDomain: "asistencia-orquestando.firebaseapp.com",
+    projectId: "asistencia-orquestando",
+    storageBucket: "asistencia-orquestando.firebasestorage.app",
+    messagingSenderId: "871572030454",
+    appId: "1:871572030454:web:a79ec963141b20e1647dd7",
+    measurementId: "G-1QEC27KMPC"
+  };
 
-const mesSel = document.getElementById("mes");
-const anioSel = document.getElementById("anio");
-const educadorSel = document.getElementById("educador");
-const calendario = document.getElementById("calendario");
+  // Inicializar Firebase
+  firebase.initializeApp(firebaseConfig);
+  const db = firebase.firestore();
 
-/* MESES */
-["Enero","Febrero","Marzo","Abril","Mayo","Junio","Julio","Agosto","Septiembre","Octubre","Noviembre","Diciembre"]
-.forEach((m,i)=>mesSel.innerHTML+=`<option value="${i}">${m}</option>`);
+  /* PINES */
+  const pines = {
+    "Elvis Ylla Uscamayta": "20261",
+    "Nilton Ibarra Vilchez": "20262",
+    "Hector Roberto Galvez Zuñiga": "20263"
+  };
+  const PIN_ADMIN = "99999";
 
-/* AÑOS */
-for (let y = 2026; y <= 2035; y++) {
-  anioSel.innerHTML += `<option>${y}</option>`;
-}
+  /* SELECTORES */
+  const mesSel = document.getElementById("mes");
+  const anioSel = document.getElementById("anio");
+  const educadorSel = document.getElementById("educador");
+  const calendario = document.getElementById("calendario");
+  const adminEducador = document.getElementById("adminEducador");
+  const adminFecha = document.getElementById("adminFecha");
+  const adminEntrada = document.getElementById("adminEntrada");
+  const adminSalida = document.getElementById("adminSalida");
 
-/* MARCAR ASISTENCIA */
-function marcar(tipo) {
-  const educador = educadorSel.value;
-  const pin = document.getElementById("pin").value;
+  /* MESES Y AÑOS */
+  ["Enero","Febrero","Marzo","Abril","Mayo","Junio","Julio","Agosto","Septiembre","Octubre","Noviembre","Diciembre"]
+  .forEach((m,i)=>mesSel.innerHTML+=`<option value="${i}">${m}</option>`);
 
-  if (!educador) {
-    alert("Seleccione educador");
-    return;
+  for (let y = 2026; y <= 2035; y++) anioSel.innerHTML += `<option>${y}</option>`;
+
+  /* MARCAR ASISTENCIA */
+  async function marcar(tipo) {
+    const educador = educadorSel.value;
+    const pin = document.getElementById("pin").value;
+    if (!educador || pin !== pines[educador]) return alert("Datos incorrectos");
+
+    const hoy = new Date();
+    const fecha = hoy.toISOString().split("T")[0];
+    const hora = hoy.toLocaleTimeString();
+
+    await db.collection("asistencias")
+      .doc(`${educador}-${fecha}`)
+      .set({ [tipo]: hora }, { merge: true });
+
+    alert(`✅ ${tipo} registrada`);
   }
 
-  if (pin !== pines[educador]) {
-    alert("❌ PIN incorrecto");
-    return;
-  }
+  /* VER ASISTENCIAS */
+  async function verAsistencias() {
+    calendario.innerHTML = "";
+    const educador = educadorSel.value;
+    if (!educador) return alert("Seleccione educador");
 
-  const hoy = new Date();
-  const fecha = hoy.toISOString().split("T")[0];
-  const hora = hoy.toLocaleTimeString();
+    const anio = anioSel.value;
+    const mes = mesSel.value;
+    const snapshot = await db.collection("asistencias").get();
+    const data = {};
+    snapshot.forEach(doc => data[doc.id] = doc.data());
 
-  const key = `${educador}-${fecha}`;
-  const registro = JSON.parse(localStorage.getItem(key)) || {};
-  registro[tipo] = hora;
-  localStorage.setItem(key, JSON.stringify(registro));
+    const primerDia = new Date(anio, mes, 1);
+    const ultimoDia = new Date(anio, parseInt(mes)+1, 0).getDate();
+    let semana = document.createElement("div");
+    semana.className = "semana";
+    calendario.appendChild(semana);
 
-  alert(`✅ ${tipo.toUpperCase()} registrada`);
-}
+    for (let d = 1; d <= ultimoDia; d++) {
+      const fecha = new Date(anio, mes, d);
+      const key = `${educador}-${fecha.toISOString().split("T")[0]}`;
+      const r = data[key] || {};
 
-/* VER ASISTENCIAS */
-function verAsistencias() {
-  calendario.innerHTML = "";
-  const educador = educadorSel.value;
-  if (!educador) {
-    alert("Seleccione educador");
-    return;
-  }
+      const div = document.createElement("div");
+      div.className = "dia";
+      if ([0,6].includes(fecha.getDay())) div.classList.add("fin-semana");
+      if (r.entrada) div.classList.add("entrada");
+      if (r.salida) div.classList.add("salida");
 
-  const anio = anioSel.value;
-  const mes = mesSel.value;
+      div.innerHTML = `<strong>${d}</strong><br>
+        ${r.entrada ? "🟢 "+r.entrada : ""}
+        ${r.salida ? "<br>🔵 "+r.salida : ""}`;
 
-  const primerDia = new Date(anio, mes, 1);
-  const ultimoDia = new Date(anio, mes + 1, 0).getDate();
-
-  let inicio = (primerDia.getDay() + 1) % 7;
-  let semana = document.createElement("div");
-  semana.className = "semana";
-  calendario.appendChild(semana);
-
-  for (let i = 0; i < inicio; i++) {
-    semana.appendChild(document.createElement("div"));
-  }
-
-  for (let d = 1; d <= ultimoDia; d++) {
-    const fecha = new Date(anio, mes, d);
-    const diaJS = fecha.getDay();
-    const diaSemana = (diaJS + 1) % 7;
-
-    if (diaSemana === 0 && d !== 1) {
-      semana = document.createElement("div");
-      semana.className = "semana";
-      calendario.appendChild(semana);
+      semana.appendChild(div);
     }
-
-    const key = `${educador}-${fecha.toISOString().split("T")[0]}`;
-    const r = JSON.parse(localStorage.getItem(key)) || {};
-
-    const div = document.createElement("div");
-    div.className = "dia";
-
-    if (diaJS === 0 || diaJS === 6) div.classList.add("fin-semana");
-    if (r.entrada) div.classList.add("entrada");
-    if (r.salida) div.classList.add("salida");
-
-    div.innerHTML = `
-      <strong>${d}</strong><br>
-      ${r.entrada ? "🟢 " + r.entrada : ""}
-      ${r.salida ? "<br>🔵 " + r.salida : ""}
-    `;
-
-    semana.appendChild(div);
   }
-}
 
-/* DESCARGAR EXCEL */
-function descargarExcel() {
-  let csv = "Educador,Fecha,Entrada,Salida\n";
+  /* ADMIN */
+  function abrirAdmin() {
+    const pin = prompt("PIN ADMIN");
+    if (pin === PIN_ADMIN)
+      document.getElementById("adminPanel").style.display = "block";
+    else alert("PIN incorrecto");
+  }
 
-  Object.keys(localStorage).forEach(k => {
-    if (!k.includes("-")) return;
-    const r = JSON.parse(localStorage[k]);
-    const partes = k.split("-");
-    const educador = partes.slice(0, partes.length - 1).join("-");
-    const fecha = partes[partes.length - 1];
-    csv += `${educador},${fecha},${r.entrada || ""},${r.salida || ""}\n`;
-  });
+  async function guardarEdicion() {
+    const e = adminEducador.value;
+    const f = adminFecha.value;
+    if (!e || !f) return alert("Complete datos");
 
-  const blob = new Blob([csv], { type: "text/csv" });
-  const a = document.createElement("a");
-  a.href = URL.createObjectURL(blob);
-  a.download = "asistencias_orquestando.csv";
-  a.click();
-}
+    await db.collection("asistencias")
+      .doc(`${e}-${f}`)
+      .set({
+        entrada: adminEntrada.value,
+        salida: adminSalida.value
+      }, { merge: true });
+
+    alert("Registro actualizado");
+  }
+
+  /* DESCARGAR EXCEL */
+  async function descargarExcel() {
+    let csv = "Educador,Fecha,Entrada,Salida\n";
+    const snap = await db.collection("asistencias").get();
+
+    snap.forEach(doc => {
+      const id = doc.id;
+      const fecha = id.match(/\d{4}-\d{2}-\d{2}$/)[0];
+      const educador = id.replace("-"+fecha,"");
+      const r = doc.data();
+      csv += `${educador},${fecha},${r.entrada||""},${r.salida||""}\n`;
+    });
+
+    const blob = new Blob([csv], { type: "text/csv" });
+    const a = document.createElement("a");
+    a.href = URL.createObjectURL(blob);
+    a.download = "asistencias_orquestando.csv";
+    a.click();
+  }
 </script>
 
 </body>
